# Eval

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README_EN.md  data.ipynb  pyproject.toml
configs/: config_slurm_full.yaml
datasets/example/: README.md
datasets/example/asr/: test.jsonl
datasets/example/bbh/: bbh.jsonl
datasets/example/bfcl/live_simple/: questions.jsonl
datasets/example/bfcl/live_simple/possible_answer/: answers.jsonl
datasets/example/bfcl/multiple/: questions.jsonl
datasets/example/bfcl/multiple/possible_answer/: answers.jsonl
datasets/example/bfcl/parallel/: questions.jsonl
datasets/example/bfcl/parallel/possible_answer/: answers.jsonl
datasets/example/bfcl/simple/: questions.jsonl
datasets/example/bfcl/simple/possible_answer/: answers.jsonl
datasets/example/gsm8k/: test.jsonl
datasets/example/mmlu/: test.jsonl
datasets/example/mmlu_pro/: test.jsonl
datasets/example/ragas/: wikieval.jsonl
datasets/example/tmmluplus/: test.jsonl
docs/evals/: asr.md  bfcl.md  ifbench.md  ifeval.md  math.md  multiple_choice.md  niah.md  ragas.md  regex_match.md  text2sql.md
scripts/: create_example_datasets.py  prepare_bbh_example.py  run_slurm_full.sh  run_slurm_test.sh
tests/: test_asr.py  test_benchmark_download.py  test_bfcl.py  test_content_null_fallback.py  test_extraction_strategies.py  test_ragas.py  test_reasoning_extraction.py  test_regex_match.py
twinkle_eval/: __init__.py  benchmarks.py  config.bfcl.template.yaml  config.py  config.template.yaml  dataset.py  evaluation_strategies.py  evaluators.py  hf_uploader.py  main.py  models.py  validators.py
twinkle_eval/core/: abc.py
twinkle_eval/metrics/: __init__.py
twinkle_eval/metrics/extractors/: asr.py  bfcl_prompt.py  ragas.py  regex_match.py  tool_call.py
twinkle_eval/metrics/scorers/: asr.py  bfcl.py  ragas.py  string_match.py
twinkle_eval/models/: __init__.py  openai.py  whisper.py
twinkle_eval/runners/: evaluator.py
twinkle_eval/templates/: asr.yaml  math.yaml  multiple_choice.yaml  ragas.yaml  regex_match.yaml
